--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -192,6 +192,7 @@ service vendor.hvdcp_opti /vendor/bin/hvdcp_opti
     class main
     user root
     group system wakelock
+    disabled
 
 on charger
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
