--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -951,5 +951,10 @@ service goodix_script /vendor/bin/init.goodix.sh
     user system
     oneshot
 	
+service goodix_script2 /vendor/bin/init2.goodix.sh
+    class late_start
+    user system
+    oneshot
+
 on property:apexd.status=ready
     mount none /system/etc/swcodec/ld.config.txt /apex/com.android.media.swcodec/etc/ld.config.txt bind
