--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -387,6 +387,7 @@ on property:bluetooth.startbtsnoop=false
     stop btsnoop
 
 on property:vold.decrypt=trigger_restart_framework
+    start vendor.qcom-c_main-sh
     start config_bt_addr
 
 on property:persist.env.fastdorm.enabled=true
