--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -669,7 +669,7 @@ on property:drmdiag.load=0
 
 service qcom-sh /vendor/bin/init.qcom.sh
     class late_start
-    user system
+    user root
     group root system radio
     oneshot
 
